--- a/rest/src/main/resources/application-aws.yml
+++ b/rest/src/main/resources/application-aws.yml
@@ -10,7 +10,7 @@ spring:
             clientId: ${COGNITO_CLIENT_ID}
             clientName: ${COGNITO_CLIENT_NAME}
             clientSecret: ${COGNITO_CLIENT_SECRET}
-            scope: openid, profile, address, email, phone
+            scope: ${COGNITO_SCOPES}
       resourceserver:
         jwt:
           issuer-uri: ${COGNITO_PROVIDER_URL}
