--- a/.editorconfig
+++ b/.editorconfig
@@ -118,7 +118,10 @@ ij_java_generate_final_locals = false
 ij_java_generate_final_parameters = true
 ij_java_if_brace_force = always
 # let checkstyle guide you
-ij_java_imports_layout = unset
+# $*    : static import first in a group
+# |     : a space
+# *     : rest of imports order lexicographically
+ij_java_imports_layout = $*,|,*
 ij_java_indent_case_from_switch = true
 ij_java_insert_inner_class_imports = false
 ij_java_insert_override_annotation = true
