--- a/rest/src/main/resources/application-local.yml
+++ b/rest/src/main/resources/application-local.yml
@@ -21,6 +21,13 @@ spring:
           # see http://localhost:8888/auth/realms/wcdevs/.well-known/openid-configuration
           issuerUri: http://localhost:8888/auth/realms/wcdevs
 
+server:
+  port: 8080
+
+management:
+  server:
+    port: 8082
+
 core-app:
   allowedOrigins:
     - "*"
